k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orchestra
  labels:
    app.kubernetes.io/part-of: orchestra
